hphp/hack/test/typecheck/reactive/owned_mutable7.php.exp
File "owned_mutable7.php", line 6, characters 17-39:
`__OwnedMutable` annotated parameters are only allowed in reactive functions. (Parsing[1002])
