hphp/hack/test/typecheck/reactive/owned_mutable7.php
<?hh
<<file: __EnableUnstableFeatures('coeffects_provisional')>>

function f(): void {
  // ERROR
  $z = function(<<__OwnedMutable>> A $c): void {
  };
}

interface A {}
